Fix padding for targeted title on mobile

--- a/src/components/post/styles.scss
+++ b/src/components/post/styles.scss
@@ -34,7 +34,7 @@
     margin: 2rem 0 1rem;
   }
 
-  @media ( max-width: 768px ) {
+  @media ( max-width: 1000px ) {
     H2:target,
     H3:target,
     H3:target,
